# TestWS

./: square.bag
devel/: .catkin  .rosinstall  setup.sh
devel/lib/agitr/: anon  avoid_edges  count  hello  pubvel  pubvel_toggle  pubvel_with_max  reverse_cmd_vel  set_bg_color  spawn_turtle  subpose
devel/lib/pkgconfig/: agitr.pc
devel/share/agitr/cmake/: agitrConfig.cmake
src/agitr/: CMakeLists.txt  anon.cpp  avoid_edges.cpp  count.cpp  doublesim.launch  hello.cpp  pubvel.cpp  pubvel_toggle.cpp  pubvel_with_max.cpp  reverse.launch  reverse_cmd_vel.cpp  set_bg_color.cpp  spawn_turtle.cpp  subpose.cpp  triplesim.launch
src/qtCreateTest/: CMakeLists.txt  mainpage.dox  package.xml
src/qtCreateTest/include/qtCreateTest/: main_window.hpp  qnode.hpp
src/qtCreateTest/src/: main.cpp  main_window.cpp  qnode.cpp
src/qtCreateTest/ui/: main_window.ui
